# Playground

./: .gitignore  Cargo.toml  README.md  build.rs  imgui.ini  pipeline_cache.pso
egui-mgpu/: Cargo.toml  build.rs
egui-mgpu/examples/: hello_world.rs  image.rs
egui-mgpu/src/: lib.rs
egui-mgpu/src/shaders/: egui.frag  egui.vert
egui-mgpu/src/spirv/: egui.frag.spv  egui.vert.spv
engine/: Cargo.toml  build.rs
engine/examples/: blank_app.rs  cube_scene.rs  engine_example.rs  world_loop.rs
engine/examples/shaders/materials/: simple_fragment.frag
engine/examples/spirv/: simple_fragment.frag.spv  simple_vertex.vert.spv
engine/examples/utils/: mod.rs
engine/src/: app_state.rs  bevy_ecs_app.rs  camera.rs  components.rs  cvar_manager.rs  deferred_renderer.rs  editor.rs  engine_app.rs  fps_camera.rs  gpu_pipeline.rs  kecs_app.rs  lib.rs  loaders.rs  mesh.rs  post_process_pass.rs  render_graph.rs  resource_map.rs  scene.rs  static_deferred_renderer.rs  texture.rs  time.rs  types.rs  utils.rs
engine/src/app/: app_state.rs  console.rs  egui_support.rs  imgui_support.rs  mod.rs
engine/src/asset_map/: asset_map.rs  erased_arena.rs  hot_reload_server.rs  mod.rs  resource_map.rs
engine/src/assets/: material.rs  mesh.rs  mod.rs  shader.rs  texture.rs
engine/src/assets/loaders/: fs_texture_loader.rs  mod.rs
engine/src/core/: time.rs
engine/src/editor/: asset_picker.rs  editor_ui.rs  egui_scene_editor.rs  entity_outliner.rs  mod.rs  scene_editor.rs  ui_extension.rs
engine/src/game_framework/: component.rs  event_queue.rs  mod.rs  resources.rs  world.rs
engine/src/game_framework/systems/: input_system.rs  mod.rs  rendering_system.rs  system.rs
engine/src/game_scene/: mod.rs  scene.rs
engine/src/input/: key.rs  mod.rs
engine/src/material/: master_material.rs  material.rs  material_instance.rs  material_v2.rs  mod.rs
engine/src/math/: color.rs  mod.rs  plane.rs  shape.rs
engine/src/physics/: mod.rs
engine/src/render_scene/: bvh.rs  camera.rs  deferred_renderer.rs  mod.rs  render_structs.rs  scene.rs
engine/src/render_scene/deferred_renderer/: cascaded_shadow_map.rs  gbuffer.rs  material_data_manager.rs  mod.rs  render_image.rs  sampler_allocator.rs
engine/src/render_scene/shadow_renderer/: csm_renderer.rs  mod.rs
engine/src/resource_map/: hot_reload_server.rs  mod.rs  resource_map.rs
engine/src/scene/: mod.rs  serializable_scene.rs
engine/src/scene_renderer/: material_manager.rs  mod.rs  shader_cache.rs  structs.rs
engine/src/shaders/: combine_base.glsl  commons.incl  debug.glsl  default_fragment_deferred.frag  default_fragment_deferred_discard.frag  default_fragment_sprite.frag  default_vertex_deferred.vert  definitions.glsl  depth_draw.frag  egui.frag  egui.vert  fxaa_fs.frag  fxaa_vs.vert  gbuffer_combine.frag  gen_ibl_env_lut.comp  generate_cubemap.frag  generate_irradiance_map.frag  hammersley.incl  importance_sampling.incl  light_definitions.glsl  light_mask.frag  main_combine_shader_2d.frag  main_combine_shader_3d.frag  pbr.incl  prefilter_env_map.frag  quad_vertex.vert  random.glsl  scene_lightning.frag  screen_quad_flipped.vert  shadow_emit.frag  simple.vert  texture_copy.frag  texture_mul.frag  tonemap.frag
engine/src/shaders/templates/: material_fragment_base.incl  material_vertex_base.incl  scene_common.incl
engine/src/spirv/: gen_ibl_env_lut.comp.spv  generate_cubemap.frag.spv  generate_irradiance_map.frag.spv  prefilter_env_map copy.frag.spv  quad_vertex.vert.spv  scene_lightning.frag.spv  simple.vert.spv
engine/src/utils/: arena.rs  cubemap_utils.rs  erased_arena.rs  fps_limiter.rs  immutable_string.rs  mod.rs  sampler_allocator.rs  shader_cache.rs  shader_parameter_writer.rs  texture_packer.rs  tick.rs
engine_build_utils/: Cargo.toml
engine_macros/: Cargo.toml
engine_macros/src/: lib.rs
engine_macros_tests/: Cargo.toml
fun_stuff/: .gitattributes  Cargo.toml  build.rs
gltf_viewer/: Cargo.toml  build.rs
gltf_viewer/shaders/materials/: pbr_fragment.frag  pbr_vertex.vert  view_cubemap.frag  view_cubemap.vert
gltf_viewer/spirv/: pbr_fragment.frag.spv  pbr_vertex.vert.spv
gltf_viewer/spirv/base_pass/: pbr_fragment.frag.spv  pbr_vertex.vert.spv  view_cubemap.frag.spv  view_cubemap.vert.spv
gltf_viewer/spirv/depth_only/: pbr_fragment.frag.spv  view_cubemap.frag.spv
gltf_viewer/src/: gltf_to_scene_loader.rs  main.rs
gpu/: Cargo.toml
gpu/src/: allocator.rs  command_buffer.rs  descriptor_set.rs  gpu.rs  gpu_resource_manager.rs  handle.rs  lib.rs  material.rs  pipeline.rs  resource.rs  swapchain.rs  types.rs  vk_staging_buffer.rs
gpu/src/vk/: render_graph.rs
gpu/src/vulkan/: allocator.rs  command_buffer.rs  gpu.rs  mod.rs  render_graph.rs  swapchain.rs  types.rs  vk_staging_buffer.rs
mgpu/: Cargo.toml
mgpu/examples/: compute.rs  empty_window.rs  hello.rs  textured_cube.rs  triangle.rs
mgpu/examples/util/: mod.rs
mgpu/src/: command_recorder.rs  device.rs  lib.rs  staging_buffer.rs  staging_buffer_allocator.rs  swapchain.rs  util.rs
mgpu/src/hal/: dummy.rs  mod.rs
mgpu/src/hal/vulkan/: mod.rs  swapchain.rs  util.rs
mgpu/src/rdg/: mod.rs
platform2dgame/: Cargo.toml
platform2dgame/src/: bitmap_level.rs  character.rs  entities.rs  main.rs
raytracer/: Cargo.toml  build.rs
resource_map/: Cargo.toml
src/: app_state.rs  camera.rs  gpu.rs  gpu_extension.rs  gpu_pipeline.rs  main.rs  material.rs  mesh.rs  (+4 more)
testbench/: Cargo.toml  build.rs
testbench/src/: app.rs  app_state.rs  async_triangle.rs  compute.rs  fps_camera.rs  gltf_loader.rs  gltf_viewer.rs  kecs_scene_test.rs  main.rs  planes.rs  shader_reflection.rs  triangle.rs  utils.rs
testbench/src/app/: console.rs  mod.rs
testbench/src/input/: key.rs  mod.rs
testbench/src/shaders/: definitions.glsl  depth_draw.frag  fragment_deferred.frag  gbuffer_combine.frag  light_definitions.glsl  metallic_roughness_pbr.frag  screen_quad.vert  skybox_convolve_irradiance.frag  skybox_master.frag  skybox_spherical.frag  texture_copy.frag  tonemap.frag  vertex_deferred.vert  vertex_simple.vert
tools/: Cargo.toml
tools/src/: print_metadata.rs
(+43 files in other folders)
