[workspace]
resolver="2"
members = [
    "engine",
    "engine_macros",
    "engine_macros_tests",
    "gpu",
    "testbench",
    "platform2dgame",
]

[profile.release]
debug = true

[patch.crates-io]
egui-winit-ash-integration = { git = "https://github.com/Crax97/egui-winit-ash-integration/", branch="reuse_descriptor_sets" }