[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.*", features = ["backtrace"] }
anymap = "0.12.*"
winit = { version = "0.29", features = [ "x11" ] }
raw-window-handle = "0.6.*"
thiserror = "1.0"
log = "0.4.17"
memoffset = "0.9.0"
image = "0.24.9"
indexmap = "2.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.1"
env_logger = "0.10.0"
bitflags = "2.*"


kecs = { git="https://github.com/Crax97/kecs.git" }

mgpu = { path = "../mgpu", features = ["serde"] }
rand = "0.8.5"
num_enum = "0.7.2"
copypasta = "0.10.1"
notify = "6.1.1"
serde = { version = "1.0.197", features = ["derive"] }
rfd = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
erased-serde = "0.4.4"
gltf = "1.4.0"
glam = { version = "0.27.0", features = ["bytemuck", "serde"] }
crossbeam = "0.8.4"
thunderdome = "0.6.1"

[dev-dependencies]
approx = "0.5.1"
ron = "0.8.1"
