[package]
name = "engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.*", features = ["backtrace"] }
anymap = "0.12.*"
winit = { version = "0.30.*", features = ["x11"] }
raw-window-handle = "0.6.*"
thiserror = "1.0"
log = "0.4.17"
memoffset = "0.9.0"
image = "0.24.9"
indexmap = "2.1"
bytemuck = { version = "1.13.1", features = ["derive"] }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.1"
env_logger = "0.10.0"
bitflags = "2.*"
shaderc = "0.8.3"


kecs = { git = "https://github.com/Crax97/kecs.git" }

mgpu = { path = "../mgpu", features = ["serde"] }
egui-mgpu = { path = "../egui-mgpu" }

rand = "0.8.5"
num_enum = "0.7.2"
copypasta = "0.10.1"
notify = "6.1.1"
serde = { version = "1.0.197", features = ["derive"] }
rfd = "0.14.0"
uuid = { version = "1.8.0", features = ["v4"] }
erased-serde = "0.4.4"
glam = { version = "0.27.0", features = [
    "bytemuck",
    "serde",
    "glam-assert",
    "mint",
] }
crossbeam = "0.8.4"
serde_json = "1.0.117"
walkdir = "2.5.0"
transform-gizmo-egui = "0.1.0"
mint = "0.5.9"

[dev-dependencies]
approx = "0.5.1"
ron = "0.8.1"
toml = "0.8.13"

[build-dependencies]
engine_build_utils = { path = "../engine_build_utils" }

[target.'cfg(target_os="linux")'.dependencies]
russimp = "3.2.0"

[target.'cfg(target_os="windows")'.dependencies]
russimp = { version = "3.2.0", features = ["prebuilt"] }
