[package]
name = "engine_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote="*"
syn = { version = "*", features = ["extra-traits"] }
proc-macro2 = "*"
shaderc = "0.8.2"
anyhow = "*"