[package]
name = "gltf_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
mgpu = { path = "../mgpu" }
engine = { path = "../engine" }

gltf = "1.4.0"
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = { version = "1.0.*", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"

[build-dependencies]
engine_build_utils = { path = "../engine_build_utils" }
anyhow = { version = "1.0.*", features = ["backtrace"] }
