[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.*", features = ["linked"] }
bitflags = "2.2.*"
log = "0.4.*"
raw-window-handle = "0.5.*"
winit = "0.28.*"
thunderdome = "0.6.*"
ash-window = "0.12.*"
anymap = "0.12.*"
anyhow = "1.0.*"
thiserror = "1.0.*"