[package]
name = "gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.*", features = ["linked"] }
bitflags = "2.*"
log = "0.4.*"
raw-window-handle = "0.6.0"
winit = "0.29.*"
ash-window = "0.12.*"
anyhow = { version = "1.0.*", features = ["backtrace"] }
thiserror = "1.0.*"
bytemuck = "1.15.*"
spirv-reflect = "0.2.*"
crossbeam = "0.8.*"
anymap = "0.12.*"

serde = { version = "1.0.197", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
