[package]
name = "mgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["swapchain", "vulkan"]
swapchain = ["dep:raw-window-handle"]
vulkan = ["dep:ash", "dep:ash-window"]
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.*", features = ["serde_derive"], optional = true }
ash = { version = "0.38.*", optional = true }
ash-window = { version = "0.13.*", optional = true }
raw-window-handle = { version = "0.6.*", optional = true }


[dev-dependencies]
winit = "0.29.15"
