[package]
name = "mgpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["swapchain", "vulkan"]
swapchain = ["dep:raw-window-handle"]
vulkan = ["dep:ash", "dep:ash-window", "dep:gpu-allocator", "gpu-allocator/ash"]
serde = ["dep:serde", "bitflags/serde"]

[dependencies]
bitflags = "2.5.0"
serde = { version = "1.0.*", features = ["serde_derive"], optional = true }
ash = { version = "0.38.*", optional = true }
ash-window = { version = "0.13.*", optional = true }
raw-window-handle = { version = "0.6.*", optional = true }
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", branch = "ash-0.38", optional = true }
spirv-reflect = "0.2.3"
log = "0.4.21"


[dev-dependencies]
bytemuck = { version = "1.15.0", features = ["bytemuck_derive", "derive"] }
env_logger = "0.11.3"
glam = { version = "0.27.0", features = ["bytemuck"] }
image = "0.25.1"
shaderc = "0.8.3"
winit = "0.29.15"
