[package]
name = "platform2dgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
winit = { version = "0.28", features = [ "x11" ] }
nalgebra = "0.32.2"
raw-window-handle = "0.5.2"
thiserror = "1.0"
log = "0.4.17"
once_cell = "1.17.1"
memoffset = "0.8"
image = "0.24.6"
bytemuck = "1.13.1"

env_logger = "0.10.0"
gltf = { version = "1.2.0", features = ["KHR_lights_punctual"] }
gpu = { path = "../gpu" }
engine = { path = "../engine" }
engine_macros = { path = "../engine_macros" }

strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.1"
clap = { version = "4.4.6", features = ["derive"] }
half = { version = "2.3.1", features = ["bytemuck", "zerocopy", "num-traits"] }