[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "planes"
path = "src/planes.rs"

[[bin]]
name = "gltf_viewer"
path = "src/gltf_viewer.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37", features = ["linked"] }
anyhow = "1.0.70"
winit = "0.27.5"
nalgebra = "0.32.2"
raw-window-handle = "0.5.2"
thiserror = "1.0"
log = "0.4.17"
once_cell = "1.17.1"
memoffset = "0.8"
image = "0.24.6"

env_logger = "0.10.0"
gltf = "1.2.0"
gpu = { path = "../gpu" }
resource_map = { path = "../resource_map" }
engine = { path = "../engine" }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-rs-vulkan-renderer = { version = "1.9.0", features = ["dynamic-rendering"] }
imgui-winit-support = "0.11.0"
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.1"

[build-dependencies]
shaderc = "0.8.2"
