[package]
name = "testbench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "triangle"
path = "src/triangle.rs"

[[bin]]
name = "async_triangle"
path = "src/async_triangle.rs"

[[bin]]
name = "planes"
path = "src/planes.rs"

[[bin]]
name = "gltf_viewer"
path = "src/gltf_viewer.rs"

[[bin]]
name = "compute"
path = "src/compute.rs"

[[bin]]
name = "shader_reflection"
path = "src/shader_reflection.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
winit = { version = "0.29.*", features = [ "x11" ] }
nalgebra = "0.32.2"
raw-window-handle = "0.6.0"
thiserror = "1.0"
log = "0.4.17"
once_cell = "1.17.1"
memoffset = "0.9.0"
image = "0.24.9"
bytemuck = "1.13.1"

env_logger = "0.10.0"
gltf = { version = "1.2.0", features = ["KHR_lights_punctual"] }
gpu = { path = "../gpu" }
engine = { path = "../engine" }
engine_macros = { path = "../engine_macros" }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.1"
clap = { version = "4.4.6", features = ["derive"] }
half = { version = "2.3.1", features = ["bytemuck", "zerocopy", "num-traits"] }

[build-dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
shaderc = "0.8.2"
