[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "print_metadata"
path = "src/print_metadata.rs"

[dependencies]
mgpu = { path = "../mgpu" }
engine = { path = "../engine" }
clap = { version = "4.5.4", features = ["derive"] }
anyhow = { version = "1.0.*", features = ["backtrace"] }
